# DocumentRAG

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  container.py  security.py
backend/app/domain/: types.py
backend/app/schemas/: api.py
backend/app/services/: auth.py  chunking.py  evaluation.py  guardrails.py  models.py  parsing.py  pipeline.py  retrieval.py  storage.py  text_utils.py
backend/reliable_rag_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_pipeline.py  test_services.py
data/benchmark_corpus/: evaluation_guidelines.txt  project_submission_policy.txt  rag_overview.txt
data/corpus/: evaluation_guidelines.txt  langchain_notes.txt  project_submission_policy.txt  rag_overview.txt
data/evaluations/: demo_benchmark.json
deliverables/sample_documents/: reliable_rag_demo_source.md
deployment/: README.md  backend.Dockerfile  frontend.Dockerfile
docs/: Reliable_RAG_Project_Plan.docx  architecture.md  project-plan.html  project-plan.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: CitationPanel.tsx  (+1 more)
manual_test_pack/: README.md
manual_test_pack/01_benchmark/: demo_handbook_benchmark.txt
manual_test_pack/02_conflicts/: leave_policy_2024.txt  leave_policy_2025.txt
manual_test_pack/03_tables/: student_fee_structure.md
scripts/: create_sample_document_pdf.py  export_project_plan.sh
(+11 files in other folders)
