[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reliable-rag-backend"
version = "0.1.0"
description = "Backend for a reliable document intelligence platform using hybrid RAG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.9.0",
  "langchain>=0.3.0",
  "qdrant-client>=1.12.0",
  "whoosh>=2.7.4",
  "pypdf>=5.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

